# footprint

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml  setup_and_run.bat
.github/keys/: signing-key.asc
.github/workflows/: format.yml  lint.yml  release.yaml
assets/fonts/: config.json
data/: Cargo.toml
data/src/: audio.rs  chart.rs  config.rs  lib.rs  log.rs  panel.rs  tickers_table.rs  util.rs
data/src/aggr/: ticks.rs  time.rs
data/src/chart/: comparison.rs  heatmap.rs  indicator.rs  kline.rs
data/src/config/: sidebar.rs  state.rs  theme.rs
data/src/layout/: pane.rs
data/src/panel/: ladder.rs  timeandsales.rs
exchange/: Cargo.toml
exchange/src/: adapter.rs  connect.rs  depth.rs  fetcher.rs  lib.rs  limiter.rs  util.rs
exchange/src/adapter/: binance.rs  bybit.rs  forex.rs  hyperliquid.rs  okex.rs
scripts/: build-macos.sh  build-windows.sh  package-linux.sh
src/: audio.rs  chart.rs  layout.rs  logger.rs  main.rs  screen.rs  style.rs  widget.rs  window.rs
src/chart/: comparison.rs  heatmap.rs  indicator.rs  kline.rs  scale.rs
src/chart/indicator/: kline.rs  plot.rs
src/chart/indicator/kline/: open_interest.rs  volume.rs
src/chart/indicator/plot/: bar.rs  line.rs
src/chart/scale/: linear.rs  timeseries.rs
src/modal/: audio.rs  layout_manager.rs  pane.rs  theme_editor.rs
src/modal/pane/: indicators.rs  settings.rs  stream.rs
src/screen/: dashboard.rs
src/screen/dashboard/: pane.rs  panel.rs  sidebar.rs  tickers_table.rs
src/widget/: chart.rs  color_picker.rs  column_drag.rs  decorate.rs  multi_split.rs  toast.rs
(+2 files in other folders)
