[package]
name = "lux-chart-data"
description = "Data aggregation, indexing, and configuration utilities for Lux Chart"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
iced_core.workspace = true
chrono.workspace = true
regex.workspace = true
palette.workspace = true
enum-map.workspace = true
rustc-hash.workspace = true
dirs-next = "2.0.0"
open = "5.3.2"

log = { version = "0.4.22", default-features = true, features = ["std"] }
thiserror = { version = "2.0.12", default-features = true, features = ["std"] }
exchange = { version = "0.1.0", path = "../exchange", package = "lux-chart-exchange" }